<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volunteer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="httpError">连接失败,请稍候再试</string>

    <!-- 左边页面 -->
   <string name="pics">图片</string>
   <string name="video">视频</string>
   <string name="ties">消息</string>
   <string name="tianqi">天气</string>
   <string name="more">更多</string>
   
   <string name="press_again_exit">再按一次退出~</string>
   <string name="not_network">暂无网络</string>
   
   <string name="drop_down_list_footer_default_text"></string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">无更多信息</string>
    
  <string name="content_desc_pinned_downloaded">Pinned to device and downloaded</string>
  <string name="content_desc_pinned_downloading">Pinned to device and downloading</string>
  <string name="content_desc_pinned_not_downloaded">Pinned to device and waiting to download
  </string>

  <string name="content_desc_unpinned_downloaded">Temporarily downloaded</string>
  <string name="content_desc_unpinned_downloading">Temporarily downloading</string>
  <string name="content_desc_unpinned_not_downloaded">Not downloaded</string>
</resources>
